# bagl

./: .gitignore  DESIGN.md  README.md  bagl.opam  dune-project
.github/workflows/: ci.yml
docs/: internals.md
docs/language-spec/: 01-introduction.md  02-lexical-structure.md  03-grammar.md  04-types.md  05-expressions.md  06-type-inference.md  07-tensor-semantics.md  08-runtime.md  09-bytecode-spec.md
docs/playground/: bagl.js  index.html
docs/reference/: index.html  verify.js
editors/vscode/: README.md  language-configuration.json  package.json
editors/vscode/src/: extension.js
editors/vscode/syntaxes/: bagl.tmLanguage.json
examples/: autodiff.bagl  conditionals.bagl  functions.bagl  hello.bagl  recursion.bagl  shape_check.bagl  tensor_ops.bagl  toplevel_if.bagl  train_xor.bagl
js/: bagl_js.ml  dune
lsp/: dune  lsp_main.ml
lsp/test/: dune  test_lsp.ml
src/: ast.ml  autodiff.ml  bytecode.ml  codegen.ml  dune  errors.ml  ir.ml  lexer.ml  location.ml  optimize.ml  parser.ml  serialize.ml  token.ml  typeinfer.ml  types.ml  vm.ml
test/: dune  test_bagl.ml
